# waii

./: .gitignore  README.md  pyproject.toml
web_ai_interface_app/: app.py
web_ai_interface_app/data/: email-001.txt
web_ai_interface_app/static/css/: style.css
web_ai_interface_app/static/js/: script.js
web_ai_interface_app/templates/: index.html
